--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </ol>
       <div class="carousel-inner" stype="width:100%">
         <div class="item active">
-          <img src="images/2.jpg" alt="Second slide">
+          <img src="images/2.JPG" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>非凡精湛的手袋</h1>
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="images/3.jpg" alt="Third slide">
+          <img src="images/3.JPG" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>无与伦比的设计</h1>
@@ -106,7 +106,7 @@
           </div>    
         </div>
         <div class="item">
-          <img src="images/4.jpg" alt="Fourth slide">
+          <img src="images/4.JPG" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>年轻就要张扬</h1>
@@ -116,7 +116,7 @@
           </div>    
         </div>    
         <div class="item">
-          <img src="images/5.jpg" alt="Fourth slide">
+          <img src="images/5.JPG" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>完美的现代工业做工</h1>
@@ -126,7 +126,7 @@
           </div>    
         </div>   
         <div class="item">
-          <img src="images/6.jpg" alt="Fourth slide">
+          <img src="images/6.JPG" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>分量十足的五金件</h1>
@@ -136,7 +136,7 @@
           </div>    
         </div>    
         <div class="item">
-          <img src="images/7.jpg" alt="Fourth slide">
+          <img src="images/7.JPG" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>年轻人的手袋</h1>
