--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="navbar-wrapper">
       <div class="container">
 
-        <nav class="navbar navbar-inverse navbar-static-top">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -77,12 +77,12 @@
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
       <!-- Indicators -->
       <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="4"></li>      
-        <li data-target="#myCarousel" data-slide-to="5"></li>
-        <li data-target="#myCarousel" data-slide-to="6"></li>
-        <li data-target="#myCarousel" data-slide-to="7"></li>               
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>      
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+        <li data-target="#myCarousel" data-slide-to="4"></li>
+        <li data-target="#myCarousel" data-slide-to="5"></li>               
       </ol>
       <div class="carousel-inner" stype="width:100%">
         <div class="item active">
@@ -170,8 +170,8 @@
       <a name="item1"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">美加直邮方便快捷 <span class="text-muted">包装从内到外的完美无瑕！</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">美加直邮<span class="text-muted">从内到外完美无瑕的包装</span></h2>
+          <p class="lead">美加直邮，满100免邮费，为您节省每一分钱。从纽约到多伦多，快速便捷。包装干净整洁无破损，内部货物完美无瑕疵。</p>
         </div>
         <div class="col-md-5">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img1.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
