--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
       <a name="item2"/>
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Coach 24亿美元收购kate spade<span class="text-muted">完美谢幕，最后的机会不容错过</span></h2>
+          <p class="lead">Coach chief financial officer Kevin Wills said the cost savings will allow Kate Spade to have fewer "online flash sales," a change that would help bolster the brand's image as maker of true luxury products.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img2.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
