--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
       <a name="item2"/>
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Coach 24亿美元收购kate spade<span class="text-muted">完美谢幕，最后的机会不容错过</span></h2>
-          <p class="lead">Coach chief financial officer Kevin Wills said the cost savings will allow Kate Spade to have fewer "online flash sales," a change that would help bolster the brand's image as maker of true luxury products.</p>
+          <h2 class="featurette-heading">Coach 24亿美元收购kate spade<span class="text-muted">计划将其打造成高端奢侈品牌</span></h2>
+          <p class="lead">Coach CFO Kevin Wills接受采访时说，将计划缩减kate spade的网上销售数量，借此改变来提升kate spade的品牌形象，将其打造成一个名副其实的高端奢侈品牌。</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img2.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -194,8 +194,15 @@
       <a name="item3"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">黑色Charlotte Street Alek经典款 <span class="text-muted">it's your constant companion, your way-more than an accessory！</span></h2>
+          <ul>
+            <li class="">hight*width*depth：4.5in * 6.8in * 1.4in </li>
+            <li class="">ostrich embossed patent leather ; capital kate jacquard</li>
+            <li class="">14-karat light gold plated hardware</li>
+            <li class="">Crossbody with snap closure ; interior zippered pocket and 6 credit card slots</li>
+            <li class="">gold staple kate spade new york signature</li>
+          </ul>
+
         </div>
         <div class="col-md-5">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img3.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -206,8 +213,8 @@
       <a name="item4"/>
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">粉色Flamingos Hanna手包 <span class="text-muted">Geranium red with flamingos. Fabulous!</span></h2>
+          <p class="lead">Small Kate Spade Hanna leather handbag; Brand new with tags！</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img4.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -218,8 +225,8 @@
       <a name="item5"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Perfect Size and Design! <span class="text-muted">so many complements when wearing it out on the street.</span></h2>
+          <p class="lead">Product Dimensions: 22.9 x 7.6 x 16.5 cm ; 399 g</p>
         </div>
         <div class="col-md-5">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -230,8 +237,8 @@
       <a name="item6"/>
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">As a flamingo lover...... <span class="text-muted">You can't miss this one.</span></h2>
+          <p class="lead">YKK zipper.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img6.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -242,8 +249,8 @@
       <a name="item7"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">It's yours.</span></h2>
+          <p class="lead">22" shoulder drop.</p>
         </div>
         <div class="col-md-5">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img7.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
