--- a/round1.html
+++ b/round1.html
@@ -82,15 +82,11 @@
         <li data-target="#myCarousel" data-slide-to="2"></li>      
         <li data-target="#myCarousel" data-slide-to="3"></li>
         <li data-target="#myCarousel" data-slide-to="4"></li>
-        <li data-target="#myCarousel" data-slide-to="5"></li>        
-        <li data-target="#myCarousel" data-slide-to="6"></li>      
-        <li data-target="#myCarousel" data-slide-to="7"></li>
-        <li data-target="#myCarousel" data-slide-to="8"></li>
-        <li data-target="#myCarousel" data-slide-to="9"></li>    
+        <li data-target="#myCarousel" data-slide-to="5"></li>               
       </ol>
       <div class="carousel-inner" stype="width:100%">
         <div class="item active">
-          <img src="images/r2/01.JPG" alt="Second slide">
+          <img src="images/2.JPG" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>非凡精湛的手袋</h1>
@@ -100,7 +96,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="images/r2/02.JPG" alt="Third slide">
+          <img src="images/3.JPG" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>无与伦比的设计</h1>
@@ -110,7 +106,7 @@
           </div>    
         </div>
         <div class="item">
-          <img src="images/r2/03.JPG" alt="Fourth slide">
+          <img src="images/4.JPG" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>年轻就要张扬</h1>
@@ -120,7 +116,7 @@
           </div>    
         </div>    
         <div class="item">
-          <img src="images/r2/04.JPG" alt="Fourth slide">
+          <img src="images/5.JPG" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>完美的现代工业做工</h1>
@@ -130,7 +126,7 @@
           </div>    
         </div>   
         <div class="item">
-          <img src="images/r2/05.JPG" alt="Fourth slide">
+          <img src="images/6.JPG" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>分量十足的五金件</h1>
@@ -140,7 +136,7 @@
           </div>    
         </div>    
         <div class="item">
-          <img src="images/r2/06.JPG" alt="Fourth slide">
+          <img src="images/7.JPG" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>年轻人的手袋</h1>
@@ -148,47 +144,7 @@
               <p><a class="btn btn-lg btn-primary" href="#item7" role="button">点我查看</a></p>
             </div>
           </div>    
-        </div>
-        <div class="item">
-          <img src="images/r2/07.JPG" alt="Fourth slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>年轻人的手袋</h1>
-              <p>你值得拥有:)</p>
-              <p><a class="btn btn-lg btn-primary" href="#item7" role="button">点我查看</a></p>
-            </div>
-          </div>    
-        </div>   
-        <div class="item">
-          <img src="images/r2/08.JPG" alt="Fourth slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>年轻人的手袋</h1>
-              <p>你值得拥有:)</p>
-              <p><a class="btn btn-lg btn-primary" href="#item7" role="button">点我查看</a></p>
-            </div>
-          </div>    
-        </div>       
-        <div class="item">
-          <img src="images/r2/09.JPG" alt="Fourth slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>年轻人的手袋</h1>
-              <p>你值得拥有:)</p>
-              <p><a class="btn btn-lg btn-primary" href="#item7" role="button">点我查看</a></p>
-            </div>
-          </div>    
-        </div>   
-        <div class="item">
-          <img src="images/r2/10.JPG" alt="Fourth slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>年轻人的手袋</h1>
-              <p>你值得拥有:)</p>
-              <p><a class="btn btn-lg btn-primary" href="#item7" role="button">点我查看</a></p>
-            </div>
-          </div>    
-        </div>                                                         
+        </div>                              
       </div>
       
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
