--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </ol>
       <div class="carousel-inner" stype="width:100%">
         <div class="item active">
-          <img src="images/r2/01.JPG" alt="Second slide">
+          <img src="images/r2/01.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>非凡精湛的手袋</h1>
@@ -100,7 +100,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="images/r2/02.JPG" alt="Third slide">
+          <img src="images/r2/02.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>无与伦比的设计</h1>
@@ -110,7 +110,7 @@
           </div>    
         </div>
         <div class="item">
-          <img src="images/r2/03.JPG" alt="Fourth slide">
+          <img src="images/r2/03.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>年轻就要张扬</h1>
@@ -120,7 +120,7 @@
           </div>    
         </div>    
         <div class="item">
-          <img src="images/r2/04.JPG" alt="Fourth slide">
+          <img src="images/r2/04.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>完美的现代工业做工</h1>
@@ -130,7 +130,7 @@
           </div>    
         </div>   
         <div class="item">
-          <img src="images/r2/05.JPG" alt="Fourth slide">
+          <img src="images/r2/05.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>分量十足的五金件</h1>
@@ -140,7 +140,7 @@
           </div>    
         </div>    
         <div class="item">
-          <img src="images/r2/06.JPG" alt="Fourth slide">
+          <img src="images/r2/06.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>年轻人的手袋</h1>
@@ -150,7 +150,7 @@
           </div>    
         </div>
         <div class="item">
-          <img src="images/r2/07.JPG" alt="Fourth slide">
+          <img src="images/r2/07.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>年轻人的手袋</h1>
@@ -160,7 +160,7 @@
           </div>    
         </div>   
         <div class="item">
-          <img src="images/r2/08.JPG" alt="Fourth slide">
+          <img src="images/r2/08.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>年轻人的手袋</h1>
@@ -170,7 +170,7 @@
           </div>    
         </div>       
         <div class="item">
-          <img src="images/r2/09.JPG" alt="Fourth slide">
+          <img src="images/r2/09.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>年轻人的手袋</h1>
@@ -180,7 +180,7 @@
           </div>    
         </div>   
         <div class="item">
-          <img src="images/r2/10.JPG" alt="Fourth slide">
+          <img src="images/r2/10.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>年轻人的手袋</h1>
