--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
           </div>    
         </div>       
-        <div class="item">
+        <!--div class="item">
           <img src="images/r2/09.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
@@ -188,7 +188,7 @@
               <p><a class="btn btn-lg btn-primary" href="#item7" role="button">点我查看</a></p>
             </div>
           </div>    
-        </div>                                                         
+        </div-->                                                         
       </div>
       
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
