--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <li data-target="#myCarousel" data-slide-to="5"></li>        
         <li data-target="#myCarousel" data-slide-to="6"></li>      
         <li data-target="#myCarousel" data-slide-to="7"></li>
-        <li data-target="#myCarousel" data-slide-to="8"></li>
-        <li data-target="#myCarousel" data-slide-to="9"></li>    
+        <!--li data-target="#myCarousel" data-slide-to="8"></li>
+        <li data-target="#myCarousel" data-slide-to="9"></li-->    
       </ol>
       <div class="carousel-inner" stype="width:100%">
         <div class="item active">
