new modified files

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <p class="lead">美加直邮，满100免邮费，为您节省每一分钱。从纽约到多伦多，快速便捷。包装干净整洁无破损，内部货物完美无瑕疵。</p>
         </div>
         <div class="col-md-5">
-          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img1.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/01_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -230,7 +230,7 @@
           <p class="lead">Coach CFO Kevin Wills接受采访时说，将计划缩减kate spade的网上销售数量，借此改变来提升kate spade的品牌形象，将其打造成一个名副其实的高端奢侈品牌。</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img2.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/02_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -249,7 +249,7 @@
 
         </div>
         <div class="col-md-5">
-          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img3.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/03_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -261,7 +261,7 @@
           <p class="lead">Small Kate Spade Hanna leather handbag; Brand new with tags！</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img4.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/04_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -273,7 +273,7 @@
           <p class="lead">Product Dimensions: 22.9 x 7.6 x 16.5 cm ; 399 g</p>
         </div>
         <div class="col-md-5">
-          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/05_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -285,7 +285,7 @@
           <p class="lead">YKK zipper.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img6.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/06_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -297,9 +297,21 @@
           <p class="lead">22" shoulder drop.</p>
         </div>
         <div class="col-md-5">
-          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/img7.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/07_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
+
+      <hr class="featurette-divider">     
+      <a name="item8"/>
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">It's yours.</span></h2>
+          <p class="lead">22" shoulder drop.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/08_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        </div>
+      </div>      
 
       <hr class="featurette-divider">        
 
