rename old files

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Waver <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Waver 1 - kate spade (sold)</a></li>
-                    <li><a href="#">Waver 2 - comming soon</a></li>
+                    <li><a href="round1.html">Waver 1 - kate spade (sold)</a></li>
+                    <li><a href="#">Waver 2 - kate sapde (wkru 4430)</a></li>
                     <!--<li><a href="#">Something else here</a></li>
                     <li role="separator" class="divider"></li>
                     <li class="dropdown-header">Nav header</li>
