--- a/round1.html
+++ b/round1.html
@@ -56,7 +56,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Waver <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="#">Waver 1 - kate spade (sold)</a></li>
-                    <li><a href="#">Waver 2 - comming soon</a></li>
+                    <li><a href="index.html">Waver 2 - kate sapde (wkru 4430)</a></li>
                     <!--<li><a href="#">Something else here</a></li>
                     <li role="separator" class="divider"></li>
                     <li class="dropdown-header">Nav header</li>
