--- a/round1.html
+++ b/round1.html
@@ -55,7 +55,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Waver <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Waver 1 - kate spade (sold)</a></li>
+                    <li><a href="#"><del>Waver 1 - kate spade (sold)</del></a></li>
                     <li><a href="index.html">Waver 2 - kate sapde (wkru 4430)</a></li>
                     <!--<li><a href="#">Something else here</a></li>
                     <li role="separator" class="divider"></li>
