--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
         <div class="col-md-7">
           <h2 class="featurette-heading">黑色Charlotte Street Alek经典款 <span class="text-muted">it's your constant companion, your way-more than an accessory！</span></h2>
           <ul>
-            <li class="">hight*width*depth：4.5in * 6.8in * 1.4in </li>
-            <li class="">ostrich embossed patent leather ; capital kate jacquard</li>
-            <li class="">14-karat light gold plated hardware</li>
-            <li class="">Crossbody with snap closure ; interior zippered pocket and 6 credit card slots</li>
+            <li class="">Hight*Width*Depth：7.25in * 10.25in * 3.5in </li>
+            <li class="">Strap Drop: 12in</li>
+            <li class="">Style: Shoulder Bag</li>
+            <li class="">Color: White</li>
             <li class="">gold staple kate spade new york signature</li>
           </ul>
 
