--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       <a name="item3"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">白色Atwood Place夏日款 <span class="text-muted">it's your constant companion, your way-more than an accessory！</span></h2>
+          <h2 class="featurette-heading">白色Atwood Place夏日款</h2>
           <ul>
             <li class="">Hight*Width*Depth：7.25in * 10.25in * 3.5in </li>
             <li class="">Strap Drop: 12in</li>
