--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
       <a name="item1"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">美加直邮<span class="text-muted">从内到外完美无瑕的包装</span></h2>
-          <p class="lead">美加直邮，满100免邮费，为您节省每一分钱。从纽约到多伦多，快速便捷。包装干净整洁无破损，内部货物完美无瑕疵。</p>
+          <h2 class="featurette-heading">2017最新夏款atwood place<span class="text-muted">全网鲜有出货</span></h2>
+          <p class="lead">VUGHAN Mills奥特莱斯罕有2017年最新款现货，上市日期三月十一日。信誉保证，正品全网最低价。仅此一只，送门店纸质手提袋一只。</p>
         </div>
         <div class="col-md-5">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/01_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -227,7 +227,7 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Coach 24亿美元收购kate spade<span class="text-muted">计划将其打造成高端奢侈品牌</span></h2>
-          <p class="lead">Coach CFO Kevin Wills接受采访时说，将计划缩减kate spade的网上销售数量，借此改变来提升kate spade的品牌形象，将其打造成一个名副其实的高端奢侈品牌。</p>
+          <p class="lead">金色kate spade new york品牌LOGO</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/02_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -244,7 +244,7 @@
             <li class="">Strap Drop: 12in</li>
             <li class="">Style: Shoulder Bag</li>
             <li class="">Color: White</li>
-            <li class="">gold staple kate spade new york signature</li>
+            <!--li class="">gold staple kate spade new york signature</li-->
           </ul>
 
         </div>
@@ -257,8 +257,8 @@
       <a name="item4"/>
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">粉色Flamingos Hanna手包 <span class="text-muted">Geranium red with flamingos. Fabulous!</span></h2>
-          <p class="lead">Small Kate Spade Hanna leather handbag; Brand new with tags！</p>
+          <h2 class="featurette-heading">白色atwood place</h2>
+          <p class="lead">皮质，带自然纹路，手感柔软舒适。磁性按扣，开关自如。金色配件，12寸长的宽肩带。内含一条拉链，一个边袋，织物衬里。</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/04_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
