--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <a name="item1"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">2017最新夏款atwood place<span class="text-muted">全网鲜有出货</span></h2>
+          <h2 class="featurette-heading">2017年最新夏款atwood place<span class="text-muted">全网鲜有出货</span></h2>
           <p class="lead">VUGHAN Mills奥特莱斯罕有2017年最新款现货，上市日期三月十一日。信誉保证，正品全网最低价。仅此一只，送门店纸质手提袋一只。</p>
         </div>
         <div class="col-md-5">
@@ -227,7 +227,7 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Coach 24亿美元收购kate spade<span class="text-muted">计划将其打造成高端奢侈品牌</span></h2>
-          <p class="lead">金色kate spade new york品牌LOGO</p>
+          <p class="lead">金色kate spade new york品牌LOGO,高端大气上档次。</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/02_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -240,10 +240,10 @@
         <div class="col-md-7">
           <h2 class="featurette-heading">白色Atwood Place夏日款</h2>
           <ul>
-            <li class="">Hight*Width*Depth：7.25in * 10.25in * 3.5in </li>
-            <li class="">Strap Drop: 12in</li>
-            <li class="">Style: Shoulder Bag</li>
-            <li class="">Color: White</li>
+            <li class="">三围Hight*Width*Depth：7.25in * 10.25in * 3.5in </li>
+            <li class="">肩带Strap Drop: 12in</li>
+            <li class="">款式Style: Shoulder Bag</li>
+            <li class="">颜色Color: White</li>
             <!--li class="">gold staple kate spade new york signature</li-->
           </ul>
 
@@ -257,7 +257,7 @@
       <a name="item4"/>
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">白色atwood place</h2>
+          <h2 class="featurette-heading">白色atwood place简约不简单<span class="text-muted">夏日里的清凉感觉</span></h2>
           <p class="lead">皮质，带自然纹路，手感柔软舒适。磁性按扣，开关自如。金色配件，12寸长的宽肩带。内含一条拉链，一个边袋，织物衬里。</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
