--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Perfect Size and Design! <span class="text-muted">so many complements when wearing it out on the street.</span></h2>
-          <p class="lead">Product Dimensions: 22.9 x 7.6 x 16.5 cm ; 399 g</p>
+          <p class="lead">New with tags: A brand-new, unused, and unworn item in the original packaging and with original tags attached.</p>
         </div>
         <div class="col-md-5">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/05_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
