--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       <a name="item5"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Perfect Size and Design! <span class="text-muted">so many complements when wearing it out on the street.</span></h2>
+          <h2 class="featurette-heading">Perfect Size and Design! <span class="text-muted">在这个炎炎夏日里，热爱kate spade的你不容错过。</span></h2>
           <p class="lead">New with tags: A brand-new, unused, and unworn item in the original packaging and with original tags attached.</p>
         </div>
         <div class="col-md-5">
@@ -281,8 +281,8 @@
       <a name="item6"/>
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">As a flamingo lover...... <span class="text-muted">You can't miss this one.</span></h2>
-          <p class="lead">YKK zipper.</p>
+          <h2 class="featurette-heading">KATE SPADE ATWOOD PLACE ADAIR LEATHER SHOULDER BAG<span class="text-muted">少有出货，它只为你而在。</span></h2>
+          <p class="lead">款式 WKRU4430，发布日期2017年3月11日，市场零售价329加元。</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/06_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -293,8 +293,8 @@
       <a name="item7"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">It's yours.</span></h2>
-          <p class="lead">22" shoulder drop.</p>
+          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">美丽如你，值得拥有。</span></h2>
+          <p class="lead">12" shoulder drop.</p>
         </div>
         <div class="col-md-5">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/07_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -305,8 +305,8 @@
       <a name="item8"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">It's yours.</span></h2>
-          <p class="lead">22" shoulder drop.</p>
+          <h2 class="featurette-heading">品质保证，正品大折扣 <span class="text-muted">我敢保证全网最低价，不为赚钱只是玩票。</span></h2>
+          <p class="lead">含税价4折，只要140加元（1加元=5.17RMB，另需自付快递费，实报实销，大概23刀左右）。</p>
         </div>
         <div class="col-md-5">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/08_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
