--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <img src="images/r2/01.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>非凡精湛的手袋</h1>
+              <h1>最新夏日款</h1>
               <!--<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>-->
               <p><a class="btn btn-lg btn-primary" href="#item1" role="button">点我查看</a></p>
             </div>
@@ -103,7 +103,7 @@
           <img src="images/r2/02.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>无与伦比的设计</h1>
+              <h1>简约不简单</h1>
               <!--<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>-->
               <p><a class="btn btn-lg btn-primary" href="#item2" role="button">点我查看</a></p>
             </div>
@@ -113,7 +113,7 @@
           <img src="images/r2/03.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>年轻就要张扬</h1>
+              <h1>高贵端庄</h1>
               <!--<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>-->
               <p><a class="btn btn-lg btn-primary" href="#item3" role="button">点我查看</a></p>
             </div>
@@ -133,7 +133,7 @@
           <img src="images/r2/05.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>分量十足的五金件</h1>
+              <h1>无可挑剔的美丽气质</h1>
               <!--<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>-->
               <p><a class="btn btn-lg btn-primary" href="#item5" role="button">点我查看</a></p>
             </div>
@@ -143,7 +143,7 @@
           <img src="images/r2/06.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>年轻人的手袋</h1>
+              <h1>合理的价格定位</h1>
               <p>你值得拥有:)</p>
               <p><a class="btn btn-lg btn-primary" href="#item6" role="button">点我查看</a></p>
             </div>
@@ -153,8 +153,8 @@
           <img src="images/r2/07.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>年轻人的手袋</h1>
-              <p>你值得拥有:)</p>
+              <h1>完美的尺寸，舒适的宽肩带</h1>
+              <p>适合各种日常工作休闲场合佩戴</p>
               <p><a class="btn btn-lg btn-primary" href="#item7" role="button">点我查看</a></p>
             </div>
           </div>    
@@ -163,8 +163,8 @@
           <img src="images/r2/08.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>年轻人的手袋</h1>
-              <p>你值得拥有:)</p>
+              <h1>3.5in大深度</h1>
+              <p>能满足你一日全部的容物需求</p>
               <p><a class="btn btn-lg btn-primary" href="#item8" role="button">点我查看</a></p>
             </div>
           </div>    
@@ -269,7 +269,7 @@
       <a name="item5"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Perfect Size and Design! <span class="text-muted">在这个炎炎夏日里，热爱kate spade的你不容错过。</span></h2>
+          <h2 class="featurette-heading">在这个炎炎夏日里， <span class="text-muted">热爱kate spade的你不容错过。</span></h2>
           <p class="lead">New with tags: A brand-new, unused, and unworn item in the original packaging and with original tags attached.</p>
         </div>
         <div class="col-md-5">
@@ -321,7 +321,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2016 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2017 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
