--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>3.5in大深度</h1>
-              <p>能满足你一日全部的容物需求</p>
+              <p>能满足你一天的全部的容物需求</p>
               <p><a class="btn btn-lg btn-primary" href="#item8" role="button">点我查看</a></p>
             </div>
           </div>    
