--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <img src="images/r2/01.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>最新夏日款</h1>
+              <h1>2017最新夏日款</h1>
               <!--<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>-->
               <p><a class="btn btn-lg btn-primary" href="#item1" role="button">点我查看</a></p>
             </div>
