--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">KATE SPADE ATWOOD PLACE ADAIR LEATHER SHOULDER BAG<span class="text-muted">少有出货，它只为你而在。</span></h2>
-          <p class="lead">款式 WKRU4430，发布日期2017年3月11日，市场零售价329加元。</p>
+          <p class="lead">款式 WKRU4430，发布日期2017年3月11日，市场零售价329加元（不含税）。</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/06_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -293,7 +293,7 @@
       <a name="item7"/>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">美丽如你，值得拥有。</span></h2>
+          <h2 class="featurette-heading">This one. <span class="text-muted">美丽如你，值得拥有。</span></h2>
           <p class="lead">12" shoulder drop.</p>
         </div>
         <div class="col-md-5">
@@ -306,7 +306,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">品质保证，正品大折扣 <span class="text-muted">我敢保证全网最低价，不为赚钱只是玩票。</span></h2>
-          <p class="lead">含税价4折，只要140加元（1加元=5.17RMB，另需自付快递费，实报实销，大概23刀左右）。</p>
+          <p class="lead">含税价4折，只要140加元（1加元=5.17RMB，另需自付快递费，实报实销，大概23加元左右）。</p>
         </div>
         <div class="col-md-5">
           <img class="img-thumbnail featurette-image img-responsive center-block" src="images/r2/08_5.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
